src/App.css
* {
  box-sizing: border-box;
}

html,
body,
#root,
.App {
  height: 100%;
  overflow: hidden;
}

h6 {
  margin: 0;
}

a {
  color: #0064c9;
}

hr,
div hr.standard-hr {
  width: 100%;
  height: 0px;
  border: none;
  border-top: 1px dashed rgba(0, 0, 0, 0.1);
  margin: 40px 0 20px;
}

.primary-section {
  display: flex;
  flex-direction: column;
  padding: 60px;
  width: 60%;
  height: 100%;
  overflow: auto;
  padding-right: 60px;
  gap: 30px;
}

.primary-section-body {
  gap: 20px;
}

.form-container {
  display: flex;
  flex-direction: column;
  gap: 20px;
  width: 100%;
}

.form {
  margin: 40px 0 0;
}

.page-title {
  display: flex;
  align-items: center;
  gap: 8px;
  margin-bottom: 10px;
}

.new-relic-logo {
  width: 45px;
}

.suggestions-container {
  height: 100%;
  width: 40%;
  overflow: auto;
  padding: 60px;
  background-color: rgba(0, 0, 0, 0.05);
}

.MuiList-root.suggestion-list {
  display: flex;
  flex-direction: column;
  gap: 10px;
  margin-top: 20px;
}

.suggestion-container {
  display: flex;
  gap: 10px;
  flex-direction: column;
  padding: 16px 16px 10px;
  border: 1px solid #e0e0e0;
  background: #ffffff;
  box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.03);
  border-radius: 6px;
}

.suggestion-rule-container {
  display: flex;
  gap: 8px;
  align-items: center;
}

.suggestion-rule-severity {
  display: inline-block;
  width: 6px;
  height: 6px;
  background-color: #919797;
  border-radius: 100%;
}

.suggestion-rule-severity.severe {
  background-color: #df2d24;
}

.suggestion-rule-severity.moderate {
  background-color: #0c74df;
}

.suggestion-rule-label {
  font-weight: normal;
  font-size: 10px;
  line-height: 135%;
  letter-spacing: 0.75px;
  text-transform: uppercase;
  color: #6e7575;
}

.suggestion-summary-container {
  display: flex;
  gap: 12px;
  align-items: center;
}

.summary-basic {
  font-size: 15px;
  color: #283636;
  font-weight: 700;
  gap: 6px;
}

.basic-summary-example {
  font-weight: 400;
}

.suggestion-summary-current {
  text-decoration: line-through;
  color: #df2d24;
}

.suggestion-summary-current-text {
  font-size: 15px;
  color: #283636;
}

.suggestion-summary-arrow {
  transform: scale(0.9);
}

.suggestion-summary-replacement {
  padding: 5px 7px 6px;
  font-size: 15px;
  background-color: #3387dd;
  border-radius: 6px;
  color: #fff;
}

.suggestion-description-text {
  margin: 2px 0 4px;
  font-size: 13px;
  line-height: 140%;
  color: #283636;
}

.suggestions-ctas {
  display: flex;
  justify-content: space-between;
  margin: -4px -8px 0;
}

.suggestion-cta-secondary {
  display: flex;
  padding: 6px 10px;
  gap: 6px;
  align-items: center;
  border: none;
  background-color: transparent;
  font-size: 12px;
  color: #6e7575;
  border-radius: 3px;
  transition: all 0.1s ease-out;
  text-decoration: none;
}

.suggestion-cta-secondary:hover {
  background-color: rgba(0, 0, 0, 0.05);
  cursor: pointer;
}

.about div.MuiTypography-root.MuiTypography-h5:not(:first-child) {
  margin-top: 40px;
}

.about div.MuiTypography-root.MuiTypography-h5 {
  margin-bottom: -5px;
}

.about p {
  line-height: 145%;
}

.about ul {
  line-height: 155%;
}

.MuiTypography-root.suggestions-empty-state {
  display: grid;
  place-items: center;
  margin-top: 20px;
  height: 100%;
  width: 100%;
  color: rgba(0, 0, 0, 0.76);
  border: 2px solid rgba(0, 0, 0, 0.05);
  border-radius: 8px;
}

